# update

./: .gitignore  CMakeLists.txt  README.md  main.cpp  update.cpp  update.h  version.rc
language/: README.md  languageConfig.cmake
language/inc/: language.h
language/src/: language.cpp
qcustomplot/: README.md  qcustomplotConfig.cmake
